Fixed positioning of github logo in nav bar dropdown on mobile Removed duplicated head tags (already present in head-info.hbs) Preloaded back button image to avoid flicker on first load

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -2151,7 +2151,7 @@ body {
 		text-decoration-style: dotted;
 	}
 	.navbar-item .site-logo {
-		padding-top: 0.3em;
+		top: 0.15em;
 	}
 	.navbar-item .navbar-dropdown a:hover {
 		text-decoration-style: solid;
